--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -37,22 +37,22 @@
             </Label>
             <TextField fx:id="username" layoutX="156.0" layoutY="116.0" promptText="Username" />
             <PasswordField fx:id="password" layoutX="155.0" layoutY="156.0" promptText="Password" />
-            <Button fx:id="loginbutton" layoutX="156.0" layoutY="200.0" mnemonicParsing="false" onAction="#userLogin" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: #FFFFFF;" text="Login">
+            <Button fx:id="loginbutton" layoutX="156.0" layoutY="215.0" mnemonicParsing="false" onAction="#userLogin" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: #FFFFFF;" text="Login">
                <font>
                   <Font name="Ubuntu Bold" size="12.0" />
                </font>
             </Button>
-            <Label fx:id="wrongLogin" layoutX="174.0" layoutY="93.0" textFill="RED">
+            <Label fx:id="wrongLogin" contentDisplay="CENTER" layoutX="45.0" layoutY="192.0" prefHeight="16.0" prefWidth="259.0" textFill="RED">
                <font>
                   <Font name="Ubuntu Light" size="14.0" />
                </font>
             </Label>
-            <Button fx:id="registerbutton" layoutX="156.0" layoutY="246.0" mnemonicParsing="false" onAction="#userRegister" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: #FFFFFF;" text="Register">
+            <Button fx:id="registerbutton" layoutX="156.0" layoutY="261.0" mnemonicParsing="false" onAction="#userRegister" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: #FFFFFF;" text="Register">
                <font>
                   <Font name="Ubuntu Bold" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="exitbutton" layoutX="156.0" layoutY="290.0" mnemonicParsing="false" onAction="#userExit" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: #FFFFFF;" text="Exit">
+            <Button fx:id="exitbutton" layoutX="156.0" layoutY="305.0" mnemonicParsing="false" onAction="#userExit" prefHeight="35.0" prefWidth="71.0" style="-fx-background-color: #FFFFFF;" text="Exit">
                <font>
                   <Font name="Ubuntu Bold" size="12.0" />
                </font>
