--- a/src/application/AddPost.fxml
+++ b/src/application/AddPost.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,7 +12,7 @@
    <top>
       <AnchorPane prefHeight="54.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="logout" layoutX="507.0" layoutY="14.0" mnemonicParsing="false" onAction="#userLogOut" prefHeight="28.0" prefWidth="79.0" style="-fx-background-color: #FFFFFF;" text="Back">
+            <Button fx:id="logout" layoutX="507.0" layoutY="14.0" mnemonicParsing="false" onAction="#userLogOut" prefHeight="28.0" prefWidth="79.0" style="-fx-background-color: #FFFFFF;" text="Log Out">
                <font>
                   <Font name="Ubuntu Bold" size="14.0" />
                </font>
@@ -29,10 +28,9 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="postid" layoutX="286.0" layoutY="15.0" prefHeight="25.0" prefWidth="101.0" />
+            <TextField fx:id="postid" layoutX="286.0" layoutY="15.0" prefHeight="25.0" prefWidth="146.0" />
             <TextField fx:id="likes" layoutX="286.0" layoutY="114.0" />
             <TextField fx:id="shares" layoutX="286.0" layoutY="146.0" />
-            <PasswordField fx:id="mainpostid" layoutX="286.0" layoutY="180.0" />
             <Label layoutX="221.0" layoutY="20.0" text="Post ID" textAlignment="RIGHT" textFill="WHITE">
                <font>
                   <Font name="Ubuntu Bold" size="14.0" />
@@ -48,7 +46,7 @@
                   <Font name="Ubuntu Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="190.0" layoutY="185.0" text="Main Post ID" textAlignment="RIGHT" textFill="WHITE">
+            <Label layoutX="204.0" layoutY="185.0" text="Date Time" textAlignment="RIGHT" textFill="WHITE">
                <font>
                   <Font name="Ubuntu Bold" size="14.0" />
                </font>
@@ -58,7 +56,7 @@
                   <Font name="Ubuntu Bold" size="14.0" />
                </font>
             </Button>
-            <Label fx:id="invalidUserText" alignment="CENTER" layoutX="181.0" layoutY="213.0" prefHeight="16.0" prefWidth="240.0" textAlignment="CENTER" textFill="RED">
+            <Label fx:id="invalidUserText" alignment="CENTER" layoutX="181.0" layoutY="244.0" prefHeight="16.0" prefWidth="240.0" textAlignment="CENTER" textFill="RED">
                <font>
                   <Font name="Ubuntu Light" size="14.0" />
                </font>
@@ -74,6 +72,13 @@
                </font>
             </Label>
             <TextArea fx:id="content" layoutX="286.0" layoutY="47.0" prefHeight="60.0" prefWidth="203.0" />
+            <Label layoutX="190.0" layoutY="217.0" text="Main Post ID" textAlignment="RIGHT" textFill="WHITE">
+               <font>
+                  <Font name="Ubuntu Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="datetime" layoutX="286.0" layoutY="178.0" />
+            <TextField fx:id="mainpostid" layoutX="286.0" layoutY="210.0" />
          </children>
       </AnchorPane>
    </center>
